<resources>
    <string name="app_name">EventReminder</string>
    <string name="title">LOGIN</string>
    <string name="name">UserName</string>
    <string name="pass">Password</string>
    <string name="cpass">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="fname">Enter Full Name</string>

    <string name="email">Enter email Id</string>
    <string name="phno">Enter Mobile Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
