<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg9"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:textColor="@color/darkerbrown"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="@color/white"
        android:textSize="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:background="@drawable/bg3"
        android:alpha="0.8"
        android:layout_margin="20dp">

        <EditText



            android:id="@+id/et_name"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:ems="10"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:inputType="textPassword"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:alpha="0.6"
            android:layout_gravity="center_horizontal"

            android:textStyle="bold"
            android:textSize="25dp"
            android:background="@drawable/roundedbutton" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textColor="@color/darkerbrown"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_signup"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account yet? Create one"
            android:textColor="@color/darkerbrown"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    </LinearLayout>



</LinearLayout>